tests/pass/Modulus.java
package pass;

public class Modulus {

    public int remainder(int x, int y){
        return x % y;
    }

}