tests/fail/Modulus.java
package fail;

public class Modulus {

    public static void main(String[] args) {
        System.out.println('a' % 10);
    }

}